--- a/src/components/main/boxes/ImagemArtigo.module.css
+++ b/src/components/main/boxes/ImagemArtigo.module.css
@@ -1,10 +1,69 @@
-.ImagemArtigo{
-    grid-column: 4 / 10;
-    height: auto;
-    display: grid;
+/* Estilos para telas grandes */
+@media (min-width: 1200px) {
+    .ImagemArtigo {
+        grid-column: 4 / 10;
+        height: auto;
+        display: grid;
+    }
+
+    .ImagemArtigo img {    
+        width: 100%;
+        overflow: hidden;
+    }
 }
 
-.ImagemArtigo img {    
-    width: 100%;
-    overflow: hidden;
+/* Estilos para telas médias */
+@media (max-width: 1200px) and (min-width: 992px) {
+    .ImagemArtigo {
+        grid-column: 4 / 10;
+        height: auto;
+        display: grid;
+    }
+
+    .ImagemArtigo img {    
+        width: 100%;
+        overflow: hidden;
+    }
+}
+
+/* Estilos para telas pequenas */
+@media (max-width: 992px) and (min-width: 768px) {
+    .ImagemArtigo {
+        grid-column: 4 / 10;
+        height: auto;
+        display: grid;
+    }
+
+    .ImagemArtigo img {    
+        width: 100%;
+        overflow: hidden;
+    }
+}
+
+/* Estilos para telas menores */
+@media (max-width: 768px) and (min-width: 576px) {
+    .ImagemArtigo {
+        grid-column: 4 / 10;
+        height: auto;
+        display: grid;
+    }
+
+    .ImagemArtigo img {    
+        width: 100%;
+        overflow: hidden;
+    }
+}
+
+/* Estilos para telas extra pequenas */
+@media (max-width: 576px) and (min-width: 320px) {
+    .ImagemArtigo {
+        grid-column: 1 / 13;
+        height: auto;
+        display: grid;
+    }
+
+    .ImagemArtigo img {    
+        width: 100%;
+        overflow: hidden;
+    }
 }
