--- a/src/components/main/boxes/whiteboxes/WhiteBox.module.css
+++ b/src/components/main/boxes/whiteboxes/WhiteBox.module.css
@@ -1,32 +1,174 @@
-.whiteBoxContent {
-    grid-column: 1 / 13;
-    display: grid;
-    height: auto;
-    grid-template-columns: repeat(12, 1fr);
-    height: auto;
-    justify-items: center;
-    align-items: center;
+/* Estilos para telas grandes */
+@media (min-width: 1200px) {
+    .whiteBoxContent {
+        grid-column: 1 / 13;
+        display: grid;
+        height: auto;
+        grid-template-columns: repeat(12, 1fr);
+        justify-items: center;
+        align-items: center;
+    }
+
+    .whiteBox {
+        grid-column: 4 / 10;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 1.2rem;
+        font-weight: 400;
+    }
+
+    .paragTitle {
+        text-indent: 2rem;
+    }
+
+    .title {
+        margin: 2rem 0;
+        display: block;
+        color: #6F2282;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+    }
+
+    .parag {
+        text-indent: 2rem;
+    }
 }
 
-.whiteBox {
-    grid-column: 4 / 10;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 400;
+/* Estilos para telas médias */
+@media (max-width: 1200px) and (min-width: 992px) {
+    .whiteBoxContent {
+        grid-column: 1 / 13;
+        display: grid;
+        height: auto;
+        grid-template-columns: repeat(12, 1fr);
+        justify-items: center;
+        align-items: center;
+    }
+
+    .whiteBox {
+        grid-column: 4 / 10;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 1.2rem;
+        font-weight: 400;
+    }
+
+    .paragTitle {
+        text-indent: 2rem;
+    }
+
+    .title {
+        margin: 2rem 0;
+        display: block;
+        color: #6F2282;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+    }
+
+    .parag {
+        text-indent: 2rem;
+    }
 }
 
-.paragTitle {
-    text-indent: 2rem;
+/* Estilos para telas pequenas */
+@media (max-width: 992px) and (min-width: 768px) {
+    .whiteBoxContent {
+        grid-column: 1 / 13;
+        display: grid;
+        height: auto;
+        grid-template-columns: repeat(12, 1fr);
+        justify-items: center;
+        align-items: center;
+    }
+
+    .whiteBox {
+        grid-column: 4 / 10;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 1.2rem;
+        font-weight: 400;
+    }
+
+    .paragTitle {
+        text-indent: 2rem;
+    }
+
+    .title {
+        margin: 2rem 0;
+        display: block;
+        color: #6F2282;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+    }
+
+    .parag {
+        text-indent: 2rem;
+    }
 }
 
-.title {
-    margin: 2rem 0;
-    display: block;
-    color: #6F2282;
-    text-transform: uppercase;
-    font-size: 1.5rem;
+/* Estilos para telas menores */
+@media (max-width: 768px) and (min-width: 576px) {
+    .whiteBoxContent {
+        grid-column: 1 / 13;
+        display: grid;
+        height: auto;
+        grid-template-columns: repeat(12, 1fr);
+        justify-items: center;
+        align-items: center;
+    }
+
+    .whiteBox {
+        grid-column: 4 / 10;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 1.2rem;
+        font-weight: 400;
+    }
+
+    .paragTitle {
+        text-indent: 2rem;
+    }
+
+    .title {
+        margin: 2rem 0;
+        display: block;
+        color: #6F2282;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+    }
+
+    .parag {
+        text-indent: 2rem;
+    }
 }
 
-.parag {
-    text-indent: 2rem;
+/* Estilos para telas extra pequenas */
+@media (max-width: 576px) and (min-width: 320px) {
+    .whiteBoxContent {
+        grid-column: 1 / 13;
+        display: grid;
+        height: auto;
+        grid-template-columns: repeat(12, 1fr);
+        justify-items: center;
+        align-items: center;
+    }
+
+    .whiteBox {
+        grid-column: 4 / 10;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 1.2rem;
+        font-weight: 400;
+    }
+
+    .paragTitle {
+        text-indent: 2rem;
+    }
+
+    .title {
+        margin: 2rem 0;
+        display: block;
+        color: #6F2282;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+    }
+
+    .parag {
+        text-indent: 2rem;
+    }
 }
